exports[`invalid(1): {\"exports\": [\"./missing.js\", \"./index.js\"]} 1`] = `

[Input]
  1 | {"exports": ["./missing.js", "./index.js"]}

`;

exports[`invalid(1): {\"exports\": [\"./missing.js\", \"./index.js\"]} 2`] = `

Message:
> 1 | {"exports": ["./missing.js", "./index.js"]}
    |              ^^^^^^^^^^^^^^ Export target \`./missing.js\` does not exist.

`;

exports[`invalid(10): {\"exports\": {\".\": [{\"import\": \"./missing.js\", \"default\": null}, \"./index.js\"]}} 1`] = `

[Input]
  1 | {"exports": {".": [{"import": "./missing.js", "default": null}, "./index.js"]}}

`;

exports[`invalid(10): {\"exports\": {\".\": [{\"import\": \"./missing.js\", \"default\": null}, \"./index.js\"]}} 2`] = `

Message:
> 1 | {"exports": {".": [{"import": "./missing.js", "default": null}, "./index.js"]}}
    |                               ^^^^^^^^^^^^^^ Export target \`./missing.js\` does not exist.

`;

exports[`invalid(11): {\"exports\": {\".\": [[{\"default\": \"./missing.js\"}], \"./index.js\"]}} 1`] = `

[Input]
  1 | {"exports": {".": [[{"default": "./missing.js"}], "./index.js"]}}

`;

exports[`invalid(11): {\"exports\": {\".\": [[{\"default\": \"./missing.js\"}], \"./index.js\"]}} 2`] = `

Message:
> 1 | {"exports": {".": [[{"default": "./missing.js"}], "./index.js"]}}
    |                                 ^^^^^^^^^^^^^^ Export target \`./missing.js\` does not exist.

`;

exports[`invalid(12): {\"exports\": {\".\": [{\"default\": [\"./missing.js\"]}, \"./index.js\"]}} 1`] = `

[Input]
  1 | {"exports": {".": [{"default": ["./missing.js"]}, "./index.js"]}}

`;

exports[`invalid(12): {\"exports\": {\".\": [{\"default\": [\"./missing.js\"]}, \"./index.js\"]}} 2`] = `

Message:
> 1 | {"exports": {".": [{"default": ["./missing.js"]}, "./index.js"]}}
    |                                 ^^^^^^^^^^^^^^ Export target \`./missing.js\` does not exist.

`;

exports[`invalid(13): {\"exports\": {\".\": [{\"default\": {\"default\": \"./missing.js\"}}, \"./index.js\"]}} 1`] = `

[Input]
  1 | {"exports": {".": [{"default": {"default": "./missing.js"}}, "./index.js"]}}

`;

exports[`invalid(13): {\"exports\": {\".\": [{\"default\": {\"default\": \"./missing.js\"}}, \"./index.js\"]}} 2`] = `

Message:
> 1 | {"exports": {".": [{"default": {"default": "./missing.js"}}, "./index.js"]}}
    |                                            ^^^^^^^^^^^^^^ Export target \`./missing.js\` does not exist.

`;

exports[`invalid(14): {\"files\": [\"missing/\"]} 1`] = `

[Input]
  1 | {"files": ["missing/"]}

`;

exports[`invalid(14): {\"files\": [\"missing/\"]} 2`] = `

Message:
> 1 | {"files": ["missing/"]}
    |            ^^^^^^^^^^ The \`files\` pattern \`missing/\` does not match any file or directory.

`;

exports[`invalid(15): {\"exports\": \"./missing.js\"} 1`] = `

[Input]
  1 | {"exports": "./missing.js"}

`;

exports[`invalid(15): {\"exports\": \"./missing.js\"} 2`] = `

Message:
> 1 | {"exports": "./missing.js"}
    |             ^^^^^^^^^^^^^^ Export target \`./missing.js\` does not exist.

`;

exports[`invalid(16): {\"exports\": {\".\": \"./missing.js\"}} 1`] = `

[Input]
  1 | {"exports": {".": "./missing.js"}}

`;

exports[`invalid(16): {\"exports\": {\".\": \"./missing.js\"}} 2`] = `

Message:
> 1 | {"exports": {".": "./missing.js"}}
    |                   ^^^^^^^^^^^^^^ Export target \`./missing.js\` does not exist.

`;

exports[`invalid(17): {\"exports\": {\"./rules/*\": \"./missing/*.js\"}} 1`] = `

[Input]
  1 | {"exports": {"./rules/*": "./missing/*.js"}}

`;

exports[`invalid(17): {\"exports\": {\"./rules/*\": \"./missing/*.js\"}} 2`] = `

Message:
> 1 | {"exports": {"./rules/*": "./missing/*.js"}}
    |                           ^^^^^^^^^^^^^^^^ Export target \`./missing/*.js\` does not exist.

`;

exports[`invalid(18): {\"exports\": {\"./rules/*\": \"./rules/*.JS\"}} 1`] = `

[Input]
  1 | {"exports": {"./rules/*": "./rules/*.JS"}}

`;

exports[`invalid(18): {\"exports\": {\"./rules/*\": \"./rules/*.JS\"}} 2`] = `

Message:
> 1 | {"exports": {"./rules/*": "./rules/*.JS"}}
    |                           ^^^^^^^^^^^^^^ Export target \`./rules/*.JS\` does not exist.

`;

exports[`invalid(19): {\"exports\": {\"./rules/*\": \"./rules/{no-missing-files,no-redundant-files}.js\"}} 1`] = `

[Input]
  1 | {"exports": {"./rules/*": "./rules/{no-missing-files,no-redundant-files}.js"}}

`;

exports[`invalid(19): {\"exports\": {\"./rules/*\": \"./rules/{no-missing-files,no-redundant-files}.js\"}} 2`] = `

Message:
> 1 | {"exports": {"./rules/*": "./rules/{no-missing-files,no-redundant-files}.js"}}
    |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Export target \`./rules/{no-missing-files,no-redundant-files}.js\` does not exist.

`;

exports[`invalid(2): {\"exports\": {\".\": [{\"import\": \"./index.js\", \"require\": \"./missing.js\"}, \"./also-missing.js\"]}} 1`] = `

[Input]
  1 | {"exports": {".": [{"import": "./index.js", "require": "./missing.js"}, "./also-missing.js"]}}

`;

exports[`invalid(2): {\"exports\": {\".\": [{\"import\": \"./index.js\", \"require\": \"./missing.js\"}, \"./also-missing.js\"]}} 2`] = `

Message:
> 1 | {"exports": {".": [{"import": "./index.js", "require": "./missing.js"}, "./also-missing.js"]}}
    |                                                        ^^^^^^^^^^^^^^ Export target \`./missing.js\` does not exist.

`;

exports[`invalid(2): {\"exports\": {\".\": [{\"import\": \"./index.js\", \"require\": \"./missing.js\"}, \"./also-missing.js\"]}} 3`] = `

Message:
> 1 | {"exports": {".": [{"import": "./index.js", "require": "./missing.js"}, "./also-missing.js"]}}
    |                                                                         ^^^^^^^^^^^^^^^^^^^ Export target \`./also-missing.js\` does not exist.

`;

exports[`invalid(20): {\"exports\": {\"./*\": \"./{missing,/tmp}/*.js\"}} 1`] = `

[Input]
  1 | {"exports": {"./*": "./{missing,/tmp}/*.js"}}

`;

exports[`invalid(20): {\"exports\": {\"./*\": \"./{missing,/tmp}/*.js\"}} 2`] = `

Message:
> 1 | {"exports": {"./*": "./{missing,/tmp}/*.js"}}
    |                     ^^^^^^^^^^^^^^^^^^^^^^^ Export target \`./{missing,/tmp}/*.js\` does not exist.

`;

exports[`invalid(21): {\"exports\": {\"./*\": \"./rules/no-missing-files.js/*/package.json\"}} 1`] = `

[Input]
  1 | {"exports": {"./*": "./rules/no-missing-files.js/*/package.json"}}

`;

exports[`invalid(21): {\"exports\": {\"./*\": \"./rules/no-missing-files.js/*/package.json\"}} 2`] = `

Message:
> 1 | {"exports": {"./*": "./rules/no-missing-files.js/*/package.json"}}
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Export target \`./rules/no-missing-files.js/*/package.json\` does not exist.

`;

exports[`invalid(22): {\"exports\": [\"./missing.js\", \"./also-missing.js\"]} 1`] = `

[Input]
  1 | {"exports": ["./missing.js", "./also-missing.js"]}

`;

exports[`invalid(22): {\"exports\": [\"./missing.js\", \"./also-missing.js\"]} 2`] = `

Message:
> 1 | {"exports": ["./missing.js", "./also-missing.js"]}
    |              ^^^^^^^^^^^^^^ Export target \`./missing.js\` does not exist.

`;

exports[`invalid(23): {\"exports\": [{\"import\": \"./missing-import.js\"}, {\"default\": \"./also-missing.js\"}]} 1`] = `

[Input]
  1 | {"exports": [{"import": "./missing-import.js"}, {"default": "./also-missing.js"}]}

`;

exports[`invalid(23): {\"exports\": [{\"import\": \"./missing-import.js\"}, {\"default\": \"./also-missing.js\"}]} 2`] = `

Message:
> 1 | {"exports": [{"import": "./missing-import.js"}, {"default": "./also-missing.js"}]}
    |                         ^^^^^^^^^^^^^^^^^^^^^ Export target \`./missing-import.js\` does not exist.

`;

exports[`invalid(23): {\"exports\": [{\"import\": \"./missing-import.js\"}, {\"default\": \"./also-missing.js\"}]} 3`] = `

Message:
> 1 | {"exports": [{"import": "./missing-import.js"}, {"default": "./also-missing.js"}]}
    |                                                             ^^^^^^^^^^^^^^^^^^^ Export target \`./also-missing.js\` does not exist.

`;

exports[`invalid(24): {\"exports\": {\"import\": \"./missing.js\", \"require\": \"./missing.js\"}} 1`] = `

[Input]
  1 | {"exports": {"import": "./missing.js", "require": "./missing.js"}}

`;

exports[`invalid(24): {\"exports\": {\"import\": \"./missing.js\", \"require\": \"./missing.js\"}} 2`] = `

Message:
> 1 | {"exports": {"import": "./missing.js", "require": "./missing.js"}}
    |                        ^^^^^^^^^^^^^^ Export target \`./missing.js\` does not exist.

`;

exports[`invalid(25): {\"exports\": {\"import\": \"./missing-import.js\", \"default\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"import": "./missing-import.js", "default": "./index.js"}}

`;

exports[`invalid(25): {\"exports\": {\"import\": \"./missing-import.js\", \"default\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"import": "./missing-import.js", "default": "./index.js"}}
    |                        ^^^^^^^^^^^^^^^^^^^^^ Export target \`./missing-import.js\` does not exist.

`;

exports[`invalid(26): {\"exports\": {\"./feature\": \"./Index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"./feature": "./Index.js"}}

`;

exports[`invalid(26): {\"exports\": {\"./feature\": \"./Index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"./feature": "./Index.js"}}
    |                           ^^^^^^^^^^^^ Export target \`./Index.js\` does not exist.

`;

exports[`invalid(27): {\"exports\": {\"./rules/*\": \"./rules\"}} 1`] = `

[Input]
  1 | {"exports": {"./rules/*": "./rules"}}

`;

exports[`invalid(27): {\"exports\": {\"./rules/*\": \"./rules\"}} 2`] = `

Message:
> 1 | {"exports": {"./rules/*": "./rules"}}
    |                           ^^^^^^^^^ Export target \`./rules\` does not exist.

`;

exports[`invalid(28): {\"files\": [\"missing\"]} 1`] = `

[Input]
  1 | {"files": ["missing"]}

`;

exports[`invalid(28): {\"files\": [\"missing\"]} 2`] = `

Message:
> 1 | {"files": ["missing"]}
    |            ^^^^^^^^^ The \`files\` pattern \`missing\` does not match any file or directory.

`;

exports[`invalid(29): {\"files\": [\"missing/*.js\"]} 1`] = `

[Input]
  1 | {"files": ["missing/*.js"]}

`;

exports[`invalid(29): {\"files\": [\"missing/*.js\"]} 2`] = `

Message:
> 1 | {"files": ["missing/*.js"]}
    |            ^^^^^^^^^^^^^^ The \`files\` pattern \`missing/*.js\` does not match any file or directory.

`;

exports[`invalid(3): {\"exports\": {\".\": [{\"default\": \"./missing.js\"}, \"./index.js\"]}} 1`] = `

[Input]
  1 | {"exports": {".": [{"default": "./missing.js"}, "./index.js"]}}

`;

exports[`invalid(3): {\"exports\": {\".\": [{\"default\": \"./missing.js\"}, \"./index.js\"]}} 2`] = `

Message:
> 1 | {"exports": {".": [{"default": "./missing.js"}, "./index.js"]}}
    |                                ^^^^^^^^^^^^^^ Export target \`./missing.js\` does not exist.

`;

exports[`invalid(30): {\"files\": [\"rules/*.JS\"]} 1`] = `

[Input]
  1 | {"files": ["rules/*.JS"]}

`;

exports[`invalid(30): {\"files\": [\"rules/*.JS\"]} 2`] = `

Message:
> 1 | {"files": ["rules/*.JS"]}
    |            ^^^^^^^^^^^^ The \`files\` pattern \`rules/*.JS\` does not match any file or directory.

`;

exports[`invalid(31): {\"files\": [\"index.js\", \"missing\"]} 1`] = `

[Input]
  1 | {"files": ["index.js", "missing"]}

`;

exports[`invalid(31): {\"files\": [\"index.js\", \"missing\"]} 2`] = `

Message:
> 1 | {"files": ["index.js", "missing"]}
    |                        ^^^^^^^^^ The \`files\` pattern \`missing\` does not match any file or directory.

`;

exports[`invalid(32): {\"files\": [\"missing{,/also-missing}\"]} 1`] = `

[Input]
  1 | {"files": ["missing{,/also-missing}"]}

`;

exports[`invalid(32): {\"files\": [\"missing{,/also-missing}\"]} 2`] = `

Message:
> 1 | {"files": ["missing{,/also-missing}"]}
    |            ^^^^^^^^^^^^^^^^^^^^^^^^^ The \`files\` pattern \`missing{,/also-missing}\` does not match any file or directory.

`;

exports[`invalid(33): {\"files\": [\"[abc\"]} 1`] = `

[Input]
  1 | {"files": ["[abc"]}

`;

exports[`invalid(33): {\"files\": [\"[abc\"]} 2`] = `

Message:
> 1 | {"files": ["[abc"]}
    |            ^^^^^^ The \`files\` pattern \`[abc\` does not match any file or directory.

`;

exports[`invalid(34): {\"files\": [\"[a-z]\"]} 1`] = `

[Input]
  1 | {"files": ["[a-z]"]}

`;

exports[`invalid(34): {\"files\": [\"[a-z]\"]} 2`] = `

Message:
> 1 | {"files": ["[a-z]"]}
    |            ^^^^^^^ The \`files\` pattern \`[a-z]\` does not match any file or directory.

`;

exports[`invalid(35): {\"files\": [\"missing.js\", \"missing.js\"]} 1`] = `

[Input]
  1 | {"files": ["missing.js", "missing.js"]}

`;

exports[`invalid(35): {\"files\": [\"missing.js\", \"missing.js\"]} 2`] = `

Message:
> 1 | {"files": ["missing.js", "missing.js"]}
    |            ^^^^^^^^^^^^ The \`files\` pattern \`missing.js\` does not match any file or directory.

`;

exports[`invalid(35): {\"files\": [\"missing.js\", \"missing.js\"]} 3`] = `

Message:
> 1 | {"files": ["missing.js", "missing.js"]}
    |                          ^^^^^^^^^^^^ The \`files\` pattern \`missing.js\` does not match any file or directory.

`;

exports[`invalid(36): {\"exports\": {\"./*\": \"./rules/*.*.js\"}} 1`] = `

[Input]
  1 | {"exports": {"./*": "./rules/*.*.js"}}

`;

exports[`invalid(36): {\"exports\": {\"./*\": \"./rules/*.*.js\"}} 2`] = `

Message:
> 1 | {"exports": {"./*": "./rules/*.*.js"}}
    |                     ^^^^^^^^^^^^^^^^ Export target \`./rules/*.*.js\` does not exist.

`;

exports[`invalid(37): {\"name\": \"package-json\", \"bin\": \"missing-cli.js\"} 1`] = `

[Input]
  1 | {"name": "package-json", "bin": "missing-cli.js"}

`;

exports[`invalid(37): {\"name\": \"package-json\", \"bin\": \"missing-cli.js\"} 2`] = `

Message:
> 1 | {"name": "package-json", "bin": "missing-cli.js"}
    |                                 ^^^^^^^^^^^^^^^^ \`bin\` target \`missing-cli.js\` does not exist.

`;

exports[`invalid(38): {\"bin\": {\"first\": \"./missing-first.js\", \"second\": \"missing-second.js\"}} 1`] = `

[Input]
  1 | {"bin": {"first": "./missing-first.js", "second": "missing-second.js"}}

`;

exports[`invalid(38): {\"bin\": {\"first\": \"./missing-first.js\", \"second\": \"missing-second.js\"}} 2`] = `

Message:
> 1 | {"bin": {"first": "./missing-first.js", "second": "missing-second.js"}}
    |                   ^^^^^^^^^^^^^^^^^^^^ \`bin\` target \`./missing-first.js\` does not exist.

`;

exports[`invalid(38): {\"bin\": {\"first\": \"./missing-first.js\", \"second\": \"missing-second.js\"}} 3`] = `

Message:
> 1 | {"bin": {"first": "./missing-first.js", "second": "missing-second.js"}}
    |                                                   ^^^^^^^^^^^^^^^^^^^ \`bin\` target \`missing-second.js\` does not exist.

`;

exports[`invalid(39): {\"bin\": \"rules\"} 1`] = `

[Input]
  1 | {"bin": "rules"}

`;

exports[`invalid(39): {\"bin\": \"rules\"} 2`] = `

Message:
> 1 | {"bin": "rules"}
    |         ^^^^^^^ \`bin\` target \`rules\` does not exist.

`;

exports[`invalid(4): {\"exports\": {\".\": [{\"node\": \"./missing.js\"}, \"./index.js\"]}} 1`] = `

[Input]
  1 | {"exports": {".": [{"node": "./missing.js"}, "./index.js"]}}

`;

exports[`invalid(4): {\"exports\": {\".\": [{\"node\": \"./missing.js\"}, \"./index.js\"]}} 2`] = `

Message:
> 1 | {"exports": {".": [{"node": "./missing.js"}, "./index.js"]}}
    |                             ^^^^^^^^^^^^^^ Export target \`./missing.js\` does not exist.

`;

exports[`invalid(5): {\"exports\": {\".\": [{\"node\": {\"import\": \"./missing.js\", \"require\": \"./index.js\"}}, \"./index.js\"]}} 1`] = `

[Input]
  1 | {"exports": {".": [{"node": {"import": "./missing.js", "require": "./index.js"}}, "./index.js"]}}

`;

exports[`invalid(5): {\"exports\": {\".\": [{\"node\": {\"import\": \"./missing.js\", \"require\": \"./index.js\"}}, \"./index.js\"]}} 2`] = `

Message:
> 1 | {"exports": {".": [{"node": {"import": "./missing.js", "require": "./index.js"}}, "./index.js"]}}
    |                                        ^^^^^^^^^^^^^^ Export target \`./missing.js\` does not exist.

`;

exports[`invalid(6): {\"exports\": {\".\": [{\"node\": {\"browser\": \"./index.js\"}}, \"./missing.js\"]}} 1`] = `

[Input]
  1 | {"exports": {".": [{"node": {"browser": "./index.js"}}, "./missing.js"]}}

`;

exports[`invalid(6): {\"exports\": {\".\": [{\"node\": {\"browser\": \"./index.js\"}}, \"./missing.js\"]}} 2`] = `

Message:
> 1 | {"exports": {".": [{"node": {"browser": "./index.js"}}, "./missing.js"]}}
    |                                                         ^^^^^^^^^^^^^^ Export target \`./missing.js\` does not exist.

`;

exports[`invalid(7): {\"exports\": {\".\": [{\"import\": \"./missing-import.js\"}, {\"node\": \"./missing-node.js\"}, \"./index.js\"]}} 1`] = `

[Input]
  1 | {"exports": {".": [{"import": "./missing-import.js"}, {"node": "./missing-node.js"}, "./index.js"]}}

`;

exports[`invalid(7): {\"exports\": {\".\": [{\"import\": \"./missing-import.js\"}, {\"node\": \"./missing-node.js\"}, \"./index.js\"]}} 2`] = `

Message:
> 1 | {"exports": {".": [{"import": "./missing-import.js"}, {"node": "./missing-node.js"}, "./index.js"]}}
    |                               ^^^^^^^^^^^^^^^^^^^^^ Export target \`./missing-import.js\` does not exist.

`;

exports[`invalid(7): {\"exports\": {\".\": [{\"import\": \"./missing-import.js\"}, {\"node\": \"./missing-node.js\"}, \"./index.js\"]}} 3`] = `

Message:
> 1 | {"exports": {".": [{"import": "./missing-import.js"}, {"node": "./missing-node.js"}, "./index.js"]}}
    |                                                                ^^^^^^^^^^^^^^^^^^^ Export target \`./missing-node.js\` does not exist.

`;

exports[`invalid(8): {\"exports\": [{\"module-sync\": \"./missing-module-sync.js\"}, \"./index.js\"]} 1`] = `

[Input]
  1 | {"exports": [{"module-sync": "./missing-module-sync.js"}, "./index.js"]}

`;

exports[`invalid(8): {\"exports\": [{\"module-sync\": \"./missing-module-sync.js\"}, \"./index.js\"]} 2`] = `

Message:
> 1 | {"exports": [{"module-sync": "./missing-module-sync.js"}, "./index.js"]}
    |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^ Export target \`./missing-module-sync.js\` does not exist.

`;

exports[`invalid(9): {\"exports\": {\".\": [{\"node\": \"./index.js\", \"default\": \"./missing.js\"}, \"./index.js\"]}} 1`] = `

[Input]
  1 | {"exports": {".": [{"node": "./index.js", "default": "./missing.js"}, "./index.js"]}}

`;

exports[`invalid(9): {\"exports\": {\".\": [{\"node\": \"./index.js\", \"default\": \"./missing.js\"}, \"./index.js\"]}} 2`] = `

Message:
> 1 | {"exports": {".": [{"node": "./index.js", "default": "./missing.js"}, "./index.js"]}}
    |                                                      ^^^^^^^^^^^^^^ Export target \`./missing.js\` does not exist.

`;
